@@ -2,6 +2,7 @@ version 0.5.2 - dd-MMM-YYYY
  . All: assign [super init] to self (issue #61)
  . Documentation: Add AUTHORS file with the cocos2d's contributors (issue #62)
  . CocosNode: added tags (getByTag, removeByTag)  (issue #52)
+ . CocosNode: fixed big memory leak (issue #67)
  . Director: able to remove event enabled nodes (issue #56)
  . Director: can be hidden / unhidden (issue #55)
  . License: Explicit paragraphs that allows cocos2d + closed source projects (issue #57)
